Bug 738043 - Don't ignore user set values from pref files even if values are identical to default. r=roc